# arivi-app

./: .ghci  .gitignore  .hindent.yaml  Jenkinsfile  README.md  allpay-proxy-config.yaml  arivi-config.yaml  cabal.project  config.yaml  node-config.yaml  stack.yaml  summary
1/: config.yaml
2/: config.yaml
config/monitoring/: collectdClient.conf
docs/diagrams/: P2P-Architecture.xml
network/: arivi-network.cabal  stack.yaml
network/lib/Arivi/Network/: ConnectionHandler.hs  DatagramServer.hs  Exception.hs  Instance.hs  StreamServer.hs  Types.hs  Utils.hs
p2p/: arivi-p2p.cabal  stack.yaml
p2p/lib/Arivi/: P2P.hs
p2p/lib/Arivi/P2P/: Config.hs  Connection.hs  Handler.hs  P2PEnv.hs  PeerMaintainer.hs  SeparateEnv.hs  ServiceRegistry.hs
p2p/lib/Arivi/P2P/Kademlia/: Kbucket.hs  LoadDefaultPeers.hs  LoadReputedPeers.hs  MessageHandler.hs  RefreshKbucket.hs  Types.hs  Utils.hs  VerifyPeer.hs
p2p/lib/Arivi/P2P/MessageHandler/: NodeEndpoint.hs  Utils.hs
p2p/lib/Arivi/P2P/PubSub/: Class.hs  Env.hs  Functions.hs  Handler.hs  Notify.hs  Publish.hs  Subscribe.hs  Types.hs
p2p/lib/Arivi/P2P/RPC/: Fetch.hs  Functions.hs  SendOptions.hs
service/: service.cabal  stack.yaml
service/app/: Main.hs
service/lib/: AriviNetworkServiceHandler.hs  AriviSecureRPC.hs  Auth.hs  LevelDB.hs  NodeConfig.hs  Service.hs  TLSServer.hs  UtxoPool.hs  code-gen.sh  service.thrift  shared.thrift
service/lib/HTTP/: Handler.hs  Server.hs  Types.hs
service/lib/Service/: AllpayTransaction.hs  AriviSecureRPC.hs  Data.hs  Env.hs  Faucet.hs  HelloWorld.hs  Merkle.hs  Nexa.hs  ProxyProviderUtxo.hs  Registration.hs  Subscriber.hs  Types.hs
service/lib/Service/Data/: Allegory.hs  Utxo.hs
service/lib/gen-hs/: AriviNetworkService.hs  AriviNetworkService_Client.hs  AriviNetworkService_Iface.hs  Service_Types.hs  SharedService.hs  SharedService_Client.hs  SharedService_Iface.hs  Shared_Types.hs
thrift/: arivi-thrift.cabal  stack.yaml
thrift/lib/: AriviNetworkServiceHandler.hs  MultiplicationService.hs  MultiplicationService_Client.hs  Service_Types.hs  SharedService.hs  Shared_Consts.hs  ThriftServer.hs  service.thrift  shared.thrift
thrift/lib/gen-hs/: AriviNetworkService.hs  AriviNetworkService_Iface.hs  MultiplicationService_Iface.hs  Service_Consts.hs  Service_Types.hs  SharedService_Iface.hs  Shared_Types.hs
utils/Arivi/Utils/: Logging.hs
