name:        service
version:     0.1.0.0
synopsis:    Services running on p2p.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/allpay-proxy
bug-reports:      https://github.com/xoken/allpay-proxy/issues

license:      BSD3
license-file: LICENSE
author:       Unknown
maintainer:   ppk@cse.iitk.ac.in
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/allpay-proxy

flag network-uri
 description: Get Network.URI from the network-uri package
 default: True

executable aaproxy
  hs-source-dirs: app, lib
  main-is: Main.hs
  ghc-options: -O2 -threaded
  build-depends:  arivi-p2p
                , base >=4.9 && <4.11
                , yaml
                , cryptonite
                , arivi-network
                , network
                , arivi-crypto
                , memory
                , time
                , cborg <=0.2.0.0
                , serialise <=0.2.0.0
                , string-conv
                , directory
                , mtl
                , monad-control
                , monad-loops
                , monad-logger
                , async
                , arivi-utils
                , stm
                , lifted-async
                , ghc-prim
                , containers
                , vector
                , unordered-containers
                , text
                , hashable
                , bytestring
                , QuickCheck
                , queue
                , transformers-base
                , exceptions
                , network-simple
                , aeson >= 1.4.0.0
                , aeson-pretty
                , cereal
                , stm-containers
                , random
                , binary
                , xoken-core
                , hspec
                , base16-bytestring
                , tinylog
                , leveldb-haskell
                , data-default
                , transformers-base
                , unliftio-core >= 0.1.2.0
                , resourcet >= 1.2.1
                , tls
                , x509-store
                , network-simple-tls
                , zlib
                , base64-bytestring
                , process
                , utf8-string
                , secp256k1-haskell
                , http-client
                , http-client-tls
                , http-conduit
                , connection
                , snap
                , lifted-base
                , errors
                , hashtables
                , lens
                , req
                --, extra
                --, monad-control

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network < 2.6

  other-modules:
         NodeConfig
         HTTP.Handler
         HTTP.Server
         HTTP.Types
         Service
         Service.Types
         Service.Env
         Service.Data
         Service.AllpayTransaction
         Service.ProxyProviderUtxo
         Service.Data.Allegory
         Service.Registration
         LevelDB
         TLSServer
         UtxoPool

  default-language:    Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
