cabal-version: 2.0


name:          service
version:       0.1
synopsis:      Allpay Proxy Provider
description: 
homepage:      http://github.com/xoken/allpay-proxy
bug-reports:   https://github.com/xoken/allpay-proxy/issues
license:       BSD3
author:        Unknown
maintainer:   
category:      Network
build-type:    Simple

source-repository head
  type: git
  location: https://github.com/xoken/allpay-proxy

executable aaproxy
  hs-source-dirs: app, lib
  main-is: Main.hs
  ghc-options: -O2 -threaded
  build-depends:  base >=4.9 && <4.11
                , yaml
                , cryptonite
                , network
                , memory
                , time
                , cborg <=0.2.0.0
                , serialise <=0.2.0.0
                , string-conv
                , directory
                , mtl
                , monad-control
                , monad-loops
                , monad-logger
                , async
                , stm
                , lifted-async
                , ghc-prim
                , containers
                , vector
                , unordered-containers
                , text
                , hashable
                , bytestring
                , QuickCheck
                , queue
                , transformers-base
                , exceptions
                , network-simple
                , aeson >= 1.4.0.0
                , aeson-pretty
                , cereal
                , stm-containers
                , random
                , binary
                , xoken-core
                , hspec
                , base16-bytestring
                , tinylog
                , leveldb-haskell
                , data-default
                , transformers-base
                , unliftio-core >= 0.1.2.0
                , resourcet >= 1.2.1
                , tls
                , x509-store
                , network-simple-tls
                , zlib
                , base64-bytestring
                , process
                , utf8-string
                , secp256k1-haskell
                , http-client
                , http-client-tls
                , http-conduit
                , connection
                , snap
                , snap-core
                , lifted-base
                , errors
                , hashtables
                , lens
                , req
                , daemons >= 0.3.0

  other-modules:
         NodeConfig
         HTTP.Handler
         HTTP.Server
         HTTP.Types
         Service
         Service.Types
         Service.Env
         Service.AllpayTransaction
         Service.ProxyProviderUtxo
         Service.Data.Allegory
         Service.Data.Utxo
         Service.Faucet
         Service.Nexa
         Service.Registration
         LevelDB
         UtxoPool

  default-language:    Haskell2010
