name:        arivi-thrift
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
-- copyright:
category:           Thrift
build-type:         Simple
cabal-version:      >=1.4

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  hs-source-dirs: lib
  build-depends:       async
                    ,  base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytes
                    ,  bytestring
                    ,  containers
                    ,  cryptonite >= 0.23
                    ,  exceptions
                    ,  lens
                    ,  lifted-base
                    ,  lifted-async <= 0.10.0.2
                    ,  memory >= 0.14.11
                    ,  monad-control
                    ,  monad-logger
                    ,  mtl
                    ,  network
                    ,  random
                    ,  serialise
                    ,  split
                    ,  stm >= 2.4.5
                    ,  text
                    ,  time
                    ,  unordered-containers <= 0.2.9.0
                    ,  uuid
                    ,  hashable
                    ,  stm-containers >= 0.2.16 
                    ,  list-t >= 1.0.0.1
                    ,  either-unwrap >= 1.1
                    ,  sorted-list
                    ,  string-conv
                    ,  aeson >= 1.4.0.0
                    ,  leveldb-haskell >= 0.6.5
                    ,  data-default >= 0.7.1.1
                    ,  resourcet >= 1.2.1
                    ,  unliftio-core >= 0.1.2.0
                    ,  yaml
                    ,  arivi-network
                    ,  arivi-crypto
                    ,  arivi-utils
                    ,  vector
  ghc-options:  -Wall -Werror  -Wredundant-constraints -fno-defer-type-errors -fno-defer-out-of-scope-variables
  default-extensions:  FlexibleContexts
  exposed-modules:

  other-modules:
                       MultiplicationService_Iface
                       MultiplicationService_Client
                       MultiplicationService
                       Service_Consts
                       Service_Types
  default-language:    Haskell2010

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True
   
executable ThriftServer
  main-is: ThriftServer.hs
  hs-source-dirs:
      lib
  default-language: Haskell2010
  ghc-options:      -threaded +RTS -N -RTS
  default-extensions:          FlexibleContexts
  Build-Depends:
    base >= 4, base < 5, ghc-prim, containers, thrift , vector, unordered-containers, text, hashable, bytestring, QuickCheck
  Extensions:
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleInstances,
    KindSignatures,
    MagicHash,
    RankNTypes,
    ScopedTypeVariables,
    TypeSynonymInstances

if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network < 2.6
 
